# ching-tech-os

./: .env.example  .gitignore  .gitmodules  .mcp.json  .mcp.json.example  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json
backend/: README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 001_create_users.py  001_initial_schema.py  002_add_share_password_and_content.py  002_create_ai_chats.py  002_seed_data.py  003_create_messages.py  003_remove_multi_tenancy.py  003_update_linebot_agent_prompts.py  004_create_login_records.py  004_remove_tenant_id_partitioned_tables.py  004_update_image_generation_prompt.py  005_partition_management.py  005_rename_line_to_bot_and_fix_timestamps.py  005_sessions_table.py  006_add_project_inventory_tool_prompt.py  006_add_username_unique_constraint.py  006_create_projects.py  007_add_user_preferences.py  007_create_ai_management.py  007_rename_line_columns_to_platform.py  007_seed_admin_user.py  008_add_download_web_image_prompt.py  008_add_summarizer_prompt.py  008_update_bot_prompt_platform.py  009_add_agent_tools_and_web_search.py  009_add_bot_usage_tracking.py  009_update_search_nas_files_prompt.py  010_add_bot_restricted_settings.py  010_add_printer_tools_prompt.py  010_add_system_prompt_to_ai_logs.py  011_add_active_agent_id.py  011_add_printer_color_mode.py  011_create_line_tables.py  (+69 more)
backend/scripts/: migrate_files_to_tenant.py  migrate_paths_to_new_format.py
backend/tests/: __init__.py  conftest.py  test_admin_api.py  test_agent_command.py  test_ai_chat_and_routes.py  test_ai_manager_service.py  test_api_ai_events.py  test_api_bot_settings.py  test_api_config_public.py  test_api_internal_push.py  test_api_linebot_router_events.py  test_api_nas_module.py  test_api_presentation.py  test_api_scheduler_routes.py  test_api_share_routes.py  test_api_skills_routes.py  test_api_telegram_router.py  test_api_terminal_events.py  test_api_user_module.py  test_auth_api_module.py  test_auth_tenant.py  test_bot_agents_fallback.py  test_bot_api_routes.py  test_bot_commands.py  test_bot_core.py  test_bot_line_adapter.py  test_bot_line_client.py  test_bot_line_file_handler.py  test_bot_line_memory.py  test_bot_line_messaging.py  test_bot_line_services.py  test_bot_line_trigger_async.py  test_bot_media_network.py  test_bot_multi_mode_integration.py  test_bot_telegram_handler.py  test_bot_telegram_modules.py  test_bot_unified_commands.py  test_cache_control.py  test_claude_agent.py  test_clawhub_client.py  (+69 more)
(+979 files in other folders)
