[project]
name = "ching-tech-os"
version = "0.3.0"
description = "Ching Tech OS Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-socketio>=5.10.0",
    "smbprotocol>=1.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.20",
    "ptyprocess>=0.7.0",
    "geoip2>=4.8.0",
    "user-agents>=2.2.0",
    "apscheduler>=3.11.1",
    "line-bot-sdk>=3.0.0",
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "playwright>=1.57.0",
    # Document Reader
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.0",
    "PyMuPDF>=1.24.0",
    # Image Generation Fallback
    "huggingface_hub>=0.20.0",
    "google-genai>=1.59.0",
    "python-telegram-bot>=21.0",
    # 認證相關
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0",
    "pandas>=3.0.0",
    "python-dotenv>=1.2.1",
    "claude-code-acp>=0.4.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ching_tech_os"]

[tool.hatch.build.targets.sdist]
include = ["src/ching_tech_os"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
